@@ -7,6 +7,7 @@ Version 6.0.4 - not yet released
   - EWMicroRecorder: parse PGRMZ as altitude above 1013.25 hPa
   - FlymasterF1: convert pressure to altitude
   - FlymasterF1: don't override the baro altitude of the primary device
+  - LX: parse LXWP0 as altitude above 1013.25 hPa
   - Zander: PZAN1 contains QNH altitude
   - Zander: verify checksum
 * user interface
